# brain-salad

./: .air-api.toml  .air-cli.toml  .dockerignore  .env.prod.example  .env.staging  .gitignore  .golangci.yml  ANALYSIS_RECOMMENDATIONS.md  BUILD_PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  EXECUTION_TRACKER.md  FINAL_ANALYSIS.md  FINAL_SUMMARY.md  GITHUB_MIGRATION_SUMMARY.md  GITHUB_READY_ROADMAP.txt  GO_MIGRATION_GAMEPLAN.md  GO_MIGRATION_PLAN.md  IDEA_ANALYSIS_PROMPT.md  LANGUAGE_ANALYSIS.md  LICENSE  LLM_SETUP_GUIDE.md  MIGRATION_EXECUTION_PROMPT.md  MIGRATION_PROMPTS.md  Makefile  PARALLEL_EXECUTION_PLAN.md  PLAN_INDEX.md  PRD.md  PRUNING_CHECKLIST.md  QUICK_START.md  README.md  READY_TO_EXECUTE.md  SOLUTION_ARCHITECTURE.md  START_HERE.md  SUBAGENT_ORCHESTRATION.md  TECHNICAL_DECISIONS.md  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: openapi.yaml
benches/: performance.rs
configs/: provider-config.example.yaml
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BETA_FEEDBACK.md  BETA_MIGRATION_GUIDE.md  BETA_TESTING_PROGRAM.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER_GUIDE.md  GO_NOGO_CHECKLIST.md  IMPLEMENTATION-AGENT4.md  INDEX.md  LINK_COMMAND_DOC_VERIFICATION.md  MIGRATION_COMPLETE.md  PHASE_6_COMPLETION.md  PRUNING_PLAN.md  V1_RELEASE_PLAN.md  provider-manager.md
examples/: telos-designer.md  telos-engineer.md  telos-startup-founder.md
go/: .gitignore  README.md  go.mod  go.sum  telos.md
migration-prompts/: README.md  phase-0-preparation.md  phase-1-core-domain.md  phase-2-cli.md  phase-3-api.md  phase-4-frontend.md  phase-5-integration.md  phase-6-beta.md  track-4a-health-monitoring.md  track-4b-logging-metrics.md  track-4c-background-tasks.md  track-5a-ollama-client.md  track-5b-semantic-cache.md  track-5c-quality-metrics.md  track-5d-llm-service-cli.md  track-6a-bulk-operations.md  track-6b-enhanced-analytics.md  track-7-database-resilience.md  track-8a-enhanced-telos.md  track-8b-utilities.md  track-8c-testing-docs.md
migrations/: 001_initial.sql
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: automation.sh  build-watcher.sh  (+11 more)
(+386 files in other folders)
